--- a/MidtermKatie.appstudio/MidtermKatie.project
+++ b/MidtermKatie.appstudio/MidtermKatie.project
@@ -39,8 +39,8 @@
           "!type": "External",
           "file": [
             "forms",
-            "Form1",
-            "Form1.json"
+            "incomeBracket",
+            "incomeBracket.json"
           ]
         }
       ],
