--- a/MidtermKatie.appstudio/MidtermKatie.project
+++ b/MidtermKatie.appstudio/MidtermKatie.project
@@ -63,7 +63,7 @@
       "eslintRules": null,
       "expanded_pmp": null,
       "extraheaders": null,
-      "firstform": "animals",
+      "firstform": "incomeBracket",
       "fontFamily": "system",
       "homescreenTitle": "",
       "icon": "nsb/images/192.png",
